--- a/views/prodHouses.ejs
+++ b/views/prodHouses.ejs
@@ -12,7 +12,7 @@
       </tr>
     </thead>
     <tbody>
-    <%rows.forEach(prod =>{%>
+    <%prods.forEach(prod =>{%>
       <tr>
         <td><%=prod.name_prodHouse%></td>
         <td><%=prod.origin_city%></td>
