--- a/views/editMovie.ejs
+++ b/views/editMovie.ejs
@@ -1,15 +1,32 @@
-<form>
+<%-include('./partials/header')%>
+
+<form style="width:200px" action="<%=movie.id%>" method="POST">
   <div class="form-group">
     <label for="email">Name</label>
-    <input type="text" class="form-control" name="name" value="<%=rows[0].name%>">
+    <input type="text" class="form-control" name="name" value="<%=movie.name%>">
   </div>
   <div class="form-group">
     <label for="email">Released Year</label>
-    <input type="text" class="form-control" name="name" value="<%=rows[0].released_year%>">
+    <input type="text" class="form-control" name="released_year" value="<%=movie.released_year%>">
   </div>
   <div class="form-group">
-    <label for="email">Genre</label>
-    <input type="text" class="form-control" name="name" value="<%=rows[0].genre%>">
+    <label for="sel1">Select Genre:</label>
+    <select class="form-control" name="genre">
+      <option>action</option>
+      <option>comedy</option>
+      <option>drama</option>
+      <option>horror</option>
+    </select>
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <div class="form-group">
+    <label for="sel1">Select Production House:</label>
+    <select class="form-control" name="prodHouseId">
+      <%prods.forEach(prod => {%>
+        <option value="<%=prod.id%>"><%=prod.id%>. <%=prod.name_prodHouse%></option>
+      <%})%>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-default">Save</button>
 </form>
+
+<%-include('./partials/footer')%>
