--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody>
-    <%rows.forEach(movie =>{%>
+    <%movies.forEach(movie =>{%>
       <tr>
         <td><%=movie.name%></td>
         <td><%=movie.released_year%></td>
